Finished Initial Mod Setup

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <ModTheSpire.version>3.18.2</ModTheSpire.version>
 
         <!-- CHANGE THIS TO MATCH YOUR MODID FIELD IN THE MAIN TodoMod CLASS FILE -->
-        <ModID>stsalchemy</ModID>
+        <ModID>alchemy</ModID>
         <!-- CHANGE THIS TO MATCH YOUR MODID FIELD IN THE MAIN TodoMod CLASS FILE -->
 
         <Steam.path>F:/SteamLibrary/steamapps</Steam.path>
